// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Styles matches secondary 1`] = `
.c0 {
  display: inline-block;
  font-size: 75%;
  font-weight: 700;
  line-height: 1;
  text-align: center;
  white-space: nowrap;
  vertical-align: baseline;
  position: relative;
  top: -1px;
  border-radius: 0.25rem;
  padding: 0.25rem 0.4rem;
  color: #fff;
  background-color: #6c757d;
}

.c0:empty {
  display: none;
}

.c0 > a {
  color: #fff;
  -webkit-text-decoration: none;
  text-decoration: none;
  background-color: #6c757d;
}

<span
  className="c0"
/>
`;

exports[`Styles matches secondary action 1`] = `
.c0 {
  display: inline-block;
  font-size: 75%;
  font-weight: 700;
  line-height: 1;
  text-align: center;
  white-space: nowrap;
  vertical-align: baseline;
  position: relative;
  top: -1px;
  border-radius: 0.25rem;
  padding: 0.25rem 0.4rem;
  color: #fff;
  background-color: #6c757d;
}

.c0:empty {
  display: none;
}

.c0 > a {
  color: #fff;
  -webkit-text-decoration: none;
  text-decoration: none;
  background-color: #6c757d;
}

.c0 > a:hover,
.c0 > a:focus {
  -webkit-text-decoration: none;
  text-decoration: none;
  background-color: #5a6268;
}

.c0:hover,
.c0:focus {
  cursor: pointer;
  background-color: #5a6268;
}

.c0:hover > a,
.c0:focus > a {
  background-color: #5a6268;
}

<span
  action={true}
  className="c0"
/>
`;
